feat: v6 -> added 2 tests