@@ -13,7 +13,6 @@ import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -57,7 +56,7 @@ public class MigrationFileReader {
             throw new IllegalArgumentException("Migration folder not found: " + migrationsPath);
         }
 
-        try (Stream<Path> paths = Files.walk(Paths.get(resourceUrl.toURI()))) {
+        try (Stream<Path> paths = Files.walk(Path.of((resourceUrl.toURI())))) {
             List<Migration> migrations = paths.filter(Files::isRegularFile)
                     .filter(path -> path.toString().endsWith(Constants.SQL_EXTENSION)
                             && path.getFileName().toString().startsWith(prefix))
